Add UI foundation for app

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@material-ui/icons": "^3.0.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "recharts": "^1.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
